--- a/react.html
+++ b/react.html
@@ -16,14 +16,33 @@
   <div id="target" style="color: blue;">Your time</div>
   <div id="counter" style="color: brown;">Count</div>
 
-  <button type="button" class="btn btn-primary">Start Timer</button>
+  <button type="button" class="btn btn-primary" onclick="startTime()">Start Timer</button>
   <button type="button" class="btn btn-primary" onclick="recordTime()">React</button>
 
   <script> 
   let reactTime=undefined
   function recordTime(){
-    reactTime=Date.now
-    console.log("Current time in milli seconds:"+reactTime)
+    reactTime = Date.now();
+    console.log("Current time in milli seconds:" +reactTime);
+  }
+
+  function startTime(){
+    for(let i=0;i<9;i++){
+      setTimeout(function(){
+        document.getElementById("counter").innerHTML="Count "+i
+      },(8-i)*1000)
+    }
+    setTimeout ( function () {
+        if (reactTime == undefined) {
+            document.getElementById("target").innerHTML = "Too Slow"
+        }
+        else {
+            var endTime = Date.now()
+            let elapsedTime = endTime - reactTime
+            document.getElementById("target").innerHTML = "Time was " + elapsedTime
+        }
+    }, 8000)
+
   }
   </script>
 
