--- a/react.html
+++ b/react.html
@@ -44,6 +44,10 @@
     }, 8000)
 
   }
+  function randomStart(){
+    startCount = Math.floor(Math.random()*(10-2+1)+2)
+    startTime()
+  }
   </script>
 
 </body>
